--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">AgendaMedicaOn</string>
+    <string name="select_speciality">Selecionar Especialidade</string>
+    <string name="select_doctor">Selecionar Médico</string>
+    <string name="available_times">Horários Disponíveis</string>
+    <string name="request_appointment">Solicitar Agendamento</string>
 </resources>
